# opengl-game-core

./: .todofile  CMakeLists.txt  README.md  build.zig  cgltf.c  collision.cpp  drawing.cpp  game.cpp  game.hpp  glad.c  lighting.cpp  loop_data.cpp  main-game-loop.cpp  main-game.cpp  main-menu.cpp  main-test.cpp  main.cpp  meshes.cpp  mouse_manager.cpp  movement.cpp  nuklear.c  nuklear.h  shaders.cpp  shared_gl_context.cpp  stb_image.c  textures.cpp  tinyobj_loader_c.c  ui.cpp  utils.cpp  window_manager.cpp
_graveyard/: nuklear_old.h  old-main-game.cpp
_graveyard/shaders/: passthrough-pos-uv.vs  passthrough-pos.vs  tex-rect-dither.fs  tex-rect2.fs
assets/ball/: dirty_football.mtl
emscripten-stuff/: shell.html
include/glad/: glad.h
shaders/: default.fs  default.vs  light.fs  light_src.fs  screen2d-line.vs  skybox.fs  skybox.vs  static-color.fs  tex-rect.fs  texture.fs  texture.vs  transform.vs  ui.fs
shaders/partials/: postprocess.fspart
shaders/ver300es/: default.fs  default.vs  light.fs  light_src.fs  screen2d-line.vs  tex-rect-dither.fs  tex-rect.fs  texture.vs  transform.vs  ui.fs  ui.vs
shaders/ver330core/: default.fs  default.vs  light.fs  light_src.fs  screen2d-line.vs  static-color.fs  tex-rect-dither.fs  tex-rect.fs  texture.fs  texture.vs  transform.vs  ui.fs  ui.vs
~graveyard/: old-main-game.cpp
